tests/snapshots/snapshot_tests__batch_presentation_fields.snap
---
source: tests/snapshot_tests.rs
assertion_line: 275
expression: value
---
{
  "average_score": 49.0,
  "certificate": "AUSBAUFÄHIG",
  "grade": "F",
  "module_averages": [
    {
      "name": "Accessibility",
      "score": 49
    },
    {
      "name": "Journey",
      "score": 48
    },
    {
      "name": "Mobile",
      "score": 85
    },
    {
      "name": "Performance",
      "score": 75
    },
    {
      "name": "SEO",
      "score": 90
    },
    {
      "name": "Security",
      "score": 80
    },
    {
      "name": "UX",
      "score": 44
    }
  ],
  "top_issue_count": 2,
  "total_urls": 2,
  "url_ranking_count": 2
}
