tests/snapshots/snapshot_tests__normalized_report_fields.snap
---
source: tests/snapshot_tests.rs
expression: value
---
{
  "certificate": "NICHT BESTANDEN",
  "finding_count": 2,
  "finding_rule_ids": [
    "a11y.name_role.missing",
    "a11y.structure.missing"
  ],
  "grade": "F",
  "module_count": 7,
  "module_names": [
    "Accessibility",
    "Journey",
    "Mobile",
    "Performance",
    "SEO",
    "Security",
    "UX"
  ],
  "overall_score": 68,
  "score": 49,
  "severity_counts": {
    "critical": 1,
    "high": 0,
    "low": 0,
    "medium": 1,
    "total": 2
  },
  "url": "https://example.com"
}
