tests/snapshots/snapshot_tests__view_model_fields.snap
---
source: tests/snapshot_tests.rs
expression: value
---
{
  "action_column_count": 1,
  "cover": {
    "certificate": "NICHT BESTANDEN",
    "critical_issues": 5,
    "grade": "F",
    "score": 49,
    "total_issues": 8
  },
  "finding_count": 2,
  "finding_rule_ids": [
    "a11y.name_role.missing",
    "a11y.structure.missing"
  ],
  "module_count": 7,
  "module_names": [
    "Barrierefreiheit",
    "Journey",
    "Mobile",
    "Performance",
    "Sicherheit",
    "Sichtbarkeit & Nutzerverständnis",
    "UX"
  ],
  "severity": {
    "critical": 5,
    "high": 0,
    "low": 0,
    "medium": 3,
    "total": 8
  },
  "summary": {
    "certificate": "NICHT BESTANDEN",
    "grade": "F",
    "maturity_label": "Kritisch",
    "score": 49
  },
  "total_action_items": 2
}
